# Zaber-Plotter

./: CMakeLists.txt  README.md  sample pos data.csv
Zplot/: Zplot.vcxproj  Zplot.vcxproj.filters  communication.cpp  communication.h  configuration.cpp  configuration.h  configuration.ini  default_settings.csv  default_settings.h  file_handling.cpp  file_handling.h  gen_config.py  gui_utils.cpp  gui_utils.h  imgui.ini  line_graph.cpp  line_graph.h  macros.h  main.cpp  safe_que.h  todo.txt  zaber_plotter.vcxproj  zaber_plotter.vcxproj.filters
include/: CMakeLists.txt
include/glfw/glfw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
include/glfw/glfw-build/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  wave
include/glfw/glfw-build/src/: Makefile  cmake_install.cmake
include/glfw/glfw-build/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
include/nfd/: nfd_win.cpp  nfd_zenity.c
include/zaber/: example.c
